force-app/main/default/objects/Case/fields/Anticipated_Duration_Months__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Duration_Months__c</fullName>
    <label>Anticipated Duration (Months)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>