force-app/main/default/objects/Case/fields/Anticipated_Hours_per_Week__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Hours_per_Week__c</fullName>
    <inlineHelpText>Please enter number only.</inlineHelpText>
    <label>Anticipated Hours per Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>