force-app/main/default/objects/Case/fields/Careplan_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Careplan_Suffix__c</fullName>
    <inlineHelpText>Max length is 255.</inlineHelpText>
    <label>Careplan Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>