force-app/main/default/objects/Case/fields/How_Often_We_re_Seeing_the_Client__c.field-meta.xml
<CustomField>
    <fullName>How_Often_We_re_Seeing_the_Client__c</fullName>
    <label>How Often We’re Seeing the Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>As Needed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>