force-app/main/default/objects/Case/fields/Outcome_Summary__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Summary__c</fullName>
    <label>Outcome Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>