force-app/main/default/objects/Case/fields/Overall_Client_Stability_This_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Overall_Client_Stability_This_Quarter__c</fullName>
    <label>Overall Client Stability This Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Improved</fullName>
            </value>
            <value>
                <fullName>Stable</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>