force-app/main/default/objects/Case/fields/Plan_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Plan_Adjustment__c</fullName>
    <label>Plan Adjustment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Continue current interventions</fullName>
            </value>
            <value>
                <fullName>Modify frequency or intensity</fullName>
            </value>
            <value>
                <fullName>Add new intervention</fullName>
            </value>
            <value>
                <fullName>Add new goal</fullName>
            </value>
            <value>
                <fullName>Escalate level of care</fullName>
            </value>
            <value>
                <fullName>Close goal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>