force-app/main/default/objects/Case/fields/Quarterly_Goal_Status__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Goal_Status__c</fullName>
    <label>Quarterly Goal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Achieved — Closed</fullName>
            </value>
            <value>
                <fullName>Improved — Continue</fullName>
            </value>
            <value>
                <fullName>Stable — Continue</fullName>
            </value>
            <value>
                <fullName>Worsened — Escalate</fullName>
            </value>
            <value>
                <fullName>No Progress</fullName>
            </value>
            <value>
                <fullName>Discontinued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>